; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_mig_log.c_MigEventErrors.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_mig_log.c_MigEventErrors.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MACH_MSG_ERROR_UNKNOWN_ID = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [19 x i8] c"%d|%d|%d -- %s %d\0A\00", align 1
@.str.1 = private unnamed_addr constant [19 x i8] c"%d|%d|%s -- %s %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @MigEventErrors(i32 %0, i64 %1, i8* %2, i8* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i64 %1, i64* %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  store i32 %4, i32* %10, align 4
  %11 = load i64, i64* %7, align 8
  %12 = load i64, i64* @MACH_MSG_ERROR_UNKNOWN_ID, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %23

14:                                               ; preds = %5
  %15 = load i32, i32* %6, align 4
  %16 = load i64, i64* %7, align 8
  %17 = load i8*, i8** %8, align 8
  %18 = bitcast i8* %17 to i32*
  %19 = load i32, i32* %18, align 4
  %20 = load i8*, i8** %9, align 8
  %21 = load i32, i32* %10, align 4
  %22 = call i32 (i8*, i32, i64, ...) @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i32 %15, i64 %16, i32 %19, i8* %20, i32 %21)
  br label %30

23:                                               ; preds = %5
  %24 = load i32, i32* %6, align 4
  %25 = load i64, i64* %7, align 8
  %26 = load i8*, i8** %8, align 8
  %27 = load i8*, i8** %9, align 8
  %28 = load i32, i32* %10, align 4
  %29 = call i32 (i8*, i32, i64, ...) @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0), i32 %24, i64 %25, i8* %26, i8* %27, i32 %28)
  br label %30

30:                                               ; preds = %23, %14
  ret void
}

declare dso_local i32 @printf(i8*, i32, i64, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
